[gd_scene load_steps=2 format=3 uid="uid://cpne8y66k1etd"]

[ext_resource type="Script" uid="uid://b853a8l8hbvmo" path="res://scenes/pause_menu.gd" id="1_n87rw"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_n87rw")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.403922, 0.403922, 0.403922, 0.584314)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Kontynuuj"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu Główne"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reset gry
"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Wyjście
"
